@@ -10,6 +10,7 @@ Cultibox (1.4.04) precise; urgency=low
     + Il est impossible de choisir la méthode de calcul des options avançées de régulation si un seul capteur est sélectionné"
     + Correction de la vérification des mots de passe de la partie WIFI
     + La tolérance est prise en compte dans le calcul max et min de la régulation d'une prise dans le logiciel
+    + Les fichiers log et power sont sauvegardés dans un repertoire tmp en cas de problèmes
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Sun July 20  13:39:17 CEST 2014
 
